# gavin

./: .gitignore  Cargo.toml  README.md  example.env  gavinconfig-example.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  cli_handler.rs  config.rs  database.rs  git_manager.rs  gitversion.rs  lib.rs  main.rs  report.rs  utils.rs
tests/: cli_tests.rs  database_tests.rs  task_state_tests.rs  version_tests.rs
