[package]
name = "gavin"
version = "0.1.0"
edition = "2021"

[lib]
name = "gavin"
path = "src/lib.rs"

[[bin]]
name = "gavin"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4.0"
regex = "1.11.0"
itertools = "0.11.0"
chrono = "0.4"
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
semver = "1.0"

[dev-dependencies]
tempfile = "3.8"